--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,14 +18,20 @@
     "slide4_text": "Conquer the field and leave your mark in history.",
     "service_accommodation": "Accommodation",
     "service_accommodation_desc": "Comfortable rooms for your team",
+    "service_accommodation_descLong": "Our accommodation service offers modern, comfortable rooms designed specifically for sports teams. Enjoy spacious living areas, high-speed Wi-Fi, nutritious meal options, and easy access to training facilities. We ensure a restful environment so your team can focus on performance and recovery.",
     "service_transport": "Transport",
     "service_transport_desc": "Safe and timely transfers",
+    "service_transport_descLong": "We provide safe and timely transfers with our fleet of modern buses and vans. Our experienced drivers ensure your team arrives punctually to every match, training session, or event. All vehicles are equipped with air conditioning, ample storage for equipment, and comfortable seating for long journeys.",
     "service_matches": "Matches",
     "service_matches_desc": "Compete with international teams",
+    "service_matches_descLong": "Participate in friendly and competitive matches against local and international teams. We organize fixtures tailored to your team's level and objectives, including referees, official fields, and post-match analysis. Experience the thrill of international competition and build lasting sports relationships.",
     "service_training": "Training",
     "service_training_desc": "Guided sessions by professionals",
+    "service_training_descLong": "Our training sessions are led by professional coaches and tailored to your team's needs. Access top-quality facilities, personalized programs, and the latest sports technology. Improve your skills, tactics, and team cohesion with expert guidance and a motivating environment.",
     "service_tours": "Tours",
     "service_tours_desc": "Discover the city and culture",
+    "service_tours_descLong": "Discover the city and its culture with our guided tours. Explore historical landmarks, enjoy local cuisine, and experience the vibrant atmosphere of Valencia. Our tours are designed to offer relaxation and cultural enrichment between your sporting commitments.",
     "service_other": "Other",
-    "service_other_desc": "Additional services for your comfort"
+    "service_other_desc": "Additional services for your comfort",
+    "service_other_descLong": "We offer a range of additional services to enhance your stay, including medical assistance, laundry, equipment rental, and 24/7 support. Our team is dedicated to ensuring your comfort and meeting any special requirements your group may have during your sports trip."
   }
