--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -27,5 +27,18 @@
     "service_tours": "Touren",
     "service_tours_desc": "Entdecken Sie die Stadt und die Kultur",
     "service_other": "Andere",
-    "service_other_desc": "Zusätzliche Dienstleistungen für Ihre Komfort"
+    "service_other_desc": "Zusätzliche Dienstleistungen für Ihre Komfort",
+    "hero_title": "SPORTSTOURISM IN VALENCIA",
+    "hero_subtitle": "VETERAN RUGBY & HOCKEY ERFAHRUNGEN",
+    "hero_description": "Wir entwickeln einzigartige Sporterlebnisse für Teams in der Valencianischen Gemeinschaft und der Costa del Sol. Reisen, genießen und leben Sie das Sportleben wie ein Legend.", 
+    "how_we_work": "Wie wir arbeiten",
+    "experiences": "Erlebnisse",
+    "howwework_contact": "Kontakt",
+    "howwework_contact_desc": "Kontaktiere uns",
+    "howwework_design": "Reise planen",
+    "howwework_design_desc": "Wir planen Ihr perfektes Erlebnis",
+    "howwework_arrival": "Ankunft",
+    "howwework_arrival_desc": "Willkommen und starten Sie Ihre Abenteuer",
+    "howwework_celebration": "Feierabend",
+    "howwework_celebration_desc": "Genießen Sie das Spiel und die Party"
   }
