--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,5 +33,18 @@
     "service_tours_descLong": "Discover the city and its culture with our guided tours. Explore historical landmarks, enjoy local cuisine, and experience the vibrant atmosphere of Valencia. Our tours are designed to offer relaxation and cultural enrichment between your sporting commitments.",
     "service_other": "Other",
     "service_other_desc": "Additional services for your comfort",
-    "service_other_descLong": "We offer a range of additional services to enhance your stay, including medical assistance, laundry, equipment rental, and 24/7 support. Our team is dedicated to ensuring your comfort and meeting any special requirements your group may have during your sports trip."
+    "service_other_descLong": "We offer a range of additional services to enhance your stay, including medical assistance, laundry, equipment rental, and 24/7 support. Our team is dedicated to ensuring your comfort and meeting any special requirements your group may have during your sports trip.",
+    "hero_title": "SPORTS TOURISM IN VALENCIA",
+    "hero_subtitle": "VETERAN RUGBY & HOCKEY EXPERIENCES",
+    "hero_description": "We design unique sports experiences for veteran teams in the Valencian Community and Costa del Sol. Travel, enjoy, and live the sport like a legend.",
+    "how_we_work": "How we work",
+    "experiences": "Experiences",
+    "howwework_contact": "Contact",
+    "howwework_contact_desc": "Get in touch with us",
+    "howwework_design": "Design the Trip",
+    "howwework_design_desc": "We plan your perfect experience",
+    "howwework_arrival": "Arrival",
+    "howwework_arrival_desc": "Welcome and start your adventure",
+    "howwework_celebration": "Celebration",
+    "howwework_celebration_desc": "Enjoy the game and the party"
   }
