--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -33,5 +33,18 @@
   "service_tours_descLong": "Descubre la ciudad y su cultura con nuestras guías. Explora los lugares históricos, disfruta de la comida local y experimenta la vibrante atmósfera de Valencia. Nuestros tours están diseñados para ofrecer relajación y enriquecimiento cultural entre tus compromisos deportivos.",
   "service_other": "Otros",
   "service_other_desc": "Servicios extra para tu comodidad",
-  "service_other_descLong": "Ofrecemos una gama de servicios adicionales para mejorar tu estancia, incluyendo asistencia médica, lavandería, alquiler de equipos y soporte 24/7. Nuestro equipo está dedicado a garantizar tu comodidad y a cumplir con cualquier requisito especial que tu grupo pueda tener durante su viaje deportivo."
+  "service_other_descLong": "Ofrecemos una gama de servicios adicionales para mejorar tu estancia, incluyendo asistencia médica, lavandería, alquiler de equipos y soporte 24/7. Nuestro equipo está dedicado a garantizar tu comodidad y a cumplir con cualquier requisito especial que tu grupo pueda tener durante su viaje deportivo.",
+  "hero_title": "TURISMO DEPORTIVO EN VALENCIA",
+  "hero_subtitle": "EXPERIENCIAS DE RUGBY Y HOCKEY PARA VETERANOS",
+  "hero_description": "Diseñamos experiencias deportivas únicas para equipos de veteranos en la Comunidad Valenciana y Costa del Sol. Viaja, disfruta y vive el deporte como un legendario.",
+  "how_we_work": "Cómo trabajamos",
+  "experiences": "Experiencias",
+  "howwework_contact": "Contacto",
+  "howwework_contact_desc": "Contacta con nosotros",
+  "howwework_design": "Diseña la ruta",
+  "howwework_design_desc": "Planificamos tu experiencia perfecta",
+  "howwework_arrival": "Llegada",
+  "howwework_arrival_desc": "Bienvenido y comienza tu aventura",
+  "howwework_celebration": "Celebración",
+  "howwework_celebration_desc": "Disfruta del partido y la fiesta"
 }
