--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -31,5 +31,17 @@
     "service_tours_desc": "Scopri la città e la cultura",
     "service_other": "Altro",
     "service_other_desc": "Servizi extra per il tuo comfort",
-    "service_other_descLong": "Offriamo una gamma di servizi aggiuntivi per migliorare la tua permanenza, compresa l'assistenza medica, la lavanderia, il noleggio di attrezzature e il supporto 24/7. Il nostro team è dedito a garantire il tuo comfort e a rispondere a tutte le esigenze speciali che il tuo gruppo può avere durante il suo viaggio sportivo."
-  }
+    "hero_title": "TOURISMO SPORTIF À VALENCIA",
+    "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
+    "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
+    "how_we_work": "Comment nous travaillons",
+    "experiences": "Expériences",
+    "howwework_contact": "Contatto",
+    "howwework_contact_desc": "Contattaci",
+    "howwework_design": "Progetta il viaggio",
+    "howwework_design_desc": "Pianifichiamo la tua esperienza perfetta",
+    "howwework_arrival": "Arrivo",
+    "howwework_arrival_desc": "Benvenuto e inizia la tua avventura",
+    "howwework_celebration": "Festa",
+    "howwework_celebration_desc": "Goditi il match e la festa"
+    }
