--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -32,5 +32,17 @@
     "service_tours_desc": "Ontdek de stad en de cultuur",
     "service_other": "Andere",
     "service_other_desc": "Extra diensten voor je comfort",
-    "service_other_descLong": "We bieden een reeks extra diensten om je comfort te verbeteren, waaronder medische hulp, wassen, uitrusting verhuring en 24/7 ondersteuning. Ons team is toegewijd aan het garanderen van je comfort en het voldoen aan speciale eisen die je groep kan hebben tijdens je sportreis."
-  }
+    "hero_title": "TOURISME SPORTIF À VALENCIA",
+    "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS", 
+    "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
+    "how_we_work": "Comment nous travaillons",
+    "experiences": "Expériences",
+    "howwework_contact": "Contact",
+    "howwework_contact_desc": "Contacteer ons",
+    "howwework_design": "Reis ontwerpen",
+    "howwework_design_desc": "We plannen je perfecte ervaring",
+    "howwework_arrival": "Aankomst",
+    "howwework_arrival_desc": "Welkom en begin je avontuur",
+    "howwework_celebration": "Feest",
+    "howwework_celebration_desc": "Geniet van het spel en de feestelijkheid"
+    }
