--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -33,5 +33,18 @@
     "service_tours_descLong": "Découvrez la ville et sa culture avec nos guides. Explorez les lieux historiques, profitez de la nourriture locale et vivez l'atmosphère animée de Valence. Nos visites sont conçues pour offrir une relaxation et un enrichissement culturel entre vos engagements sportifs.",
     "service_other": "Autres",
     "service_other_desc": "Services supplémentaires pour votre confort",
-    "service_other_descLong": "Nous offrons une gamme de services supplémentaires pour améliorer votre séjour, y compris l'assistance médicale, la blanchisserie, le matériel de location et le support 24/7. Notre équipe est dédiée à garantir votre confort et à répondre à toutes les exigences spéciales que votre groupe peut avoir lors de son voyage sportif."
+    "service_other_descLong": "Nous offrons une gamme de services supplémentaires pour améliorer votre séjour, y compris l'assistance médicale, la blanchisserie, le matériel de location et le support 24/7. Notre équipe est dédiée à garantir votre confort et à répondre à toutes les exigences spéciales que votre groupe peut avoir lors de son voyage sportif.",
+    "hero_title": "TOURISME SPORTIF À VALENCIA",
+    "hero_subtitle": "EXPERIENCES DE RUGBY ET DE HOCKEY POUR VETERANS",
+    "hero_description": "Nous concevons des expériences sportives uniques pour les équipes de vétérans dans la Communauté Valencienne et la Costa del Sol. Voyagez, profitez et vivez le sport comme un légendaire.",
+    "how_we_work": "Comment nous travaillons",  
+    "experiences": "Expériences",
+    "howwework_contact": "Contact",
+    "howwework_contact_desc": "Contactez-nous",
+    "howwework_design": "Planifier le voyage",
+    "howwework_design_desc": "Nous planifions votre expérience parfaite",
+    "howwework_arrival": "Arrivée",
+    "howwework_arrival_desc": "Bienvenue et commencez votre aventure",
+    "howwework_celebration": "Fête",
+    "howwework_celebration_desc": "Profitez du match et de la fête"
     }
