--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -44,5 +44,11 @@
     "howwework_arrival": "Aankomst",
     "howwework_arrival_desc": "Welkom en begin je avontuur",
     "howwework_celebration": "Feest",
-    "howwework_celebration_desc": "Geniet van het spel en de feestelijkheid"
+    "howwework_celebration_desc": "Geniet van het spel en de feestelijkheid",
+    "footer_description": "Specialisten in sporttourisme voor veteranenrugby- en hockeyteams in de Valencianische Gemeenschap en de Costa del Sol.",
+    "footer_quick_links": "Snelle links",
+    "footer_contact": "Contact",
+    "footer_rights": "Alle rechten voorbehouden.",
+    "contact_success": "Je bericht is succesvol verzonden.",
+    "contact_error": "Er is een fout opgetreden. Probeer het opnieuw."
     }
