--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -40,5 +40,11 @@
     "howwework_arrival": "Ankunft",
     "howwework_arrival_desc": "Willkommen und starten Sie Ihre Abenteuer",
     "howwework_celebration": "Feierabend",
-    "howwework_celebration_desc": "Genießen Sie das Spiel und die Party"
+    "howwework_celebration_desc": "Genießen Sie das Spiel und die Party",
+    "footer_description": "Spezialisten für Sporttourismus für Veteranenrugby- und Hockeyteams in der Valencianischen Gemeinschaft und der Costa del Sol.",
+    "footer_quick_links": "Schnellzugriffe",
+    "footer_contact": "Kontakt",
+    "footer_rights": "Alle Rechte vorbehalten.",
+    "contact_success": "Ihre Nachricht wurde erfolgreich gesendet.",
+    "contact_error": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut."
   }
